--- a/templates/home.html
+++ b/templates/home.html
@@ -4,4 +4,10 @@
 
 {% block content %}
     <h1>This is the Home Page</h1>
+    {% if user.is_authenticated %}
+        <p>Hi {{ user.email }}</p>
+    {% else %}
+        <p>Hi, are you already registered?</p>
+        <a href="{% url 'login' %}">Log In</a>
+    {% endif %}
 {% endblock content %}
