--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,14 @@
 {% block content %}
     <h1>This is the Home Page</h1>
     {% if user.is_authenticated %}
-        <p>Hi {{ user.email }}</p>
+        <p>Hi {{ user.username }}</p>
         <form action="{% url 'logout' %}" method="post">
             {% csrf_token %}
             <button type="submit">Log Out</button>
         </form>
     {% else %}
         <p>Hi, are you already registered?</p>
-        <a href="{% url 'login' %}">Log In</a>
+        <a href="{% url 'login' %}">Log In</a> |
+        <a href="{% url 'signup' %}">Sign Up</a>
     {% endif %}
 {% endblock content %}
