--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,11 @@
+body {
+    min-height: 75rem;
+    padding-top: 4.5rem;
+}
+
 h1 {color:coral}
 
 .bookcover{
-    height: 250px;
+    height: 150px;
     width: auto;
 }
