--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,13 +17,13 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Bookstore</a>
-        <button class="navbar-toggles" type="button" \
+        <!-- <button class="navbar-toggles" type="button" \
         data-bs-toggle="collapse" data-bs-target="#navbarCollapse" \
         aria-controls="#navbarCollapse" aria-expanded="false" \
         aria-label="Toggle navigation">
 
         <span class="navbar-toggle-icon"></span>
-        </button>
+        </button> -->
         
         <div class="collpase navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
