--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Bookstore</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Bookstore</a>
         <!-- <button class="navbar-toggles" type="button" \
         data-bs-toggle="collapse" data-bs-target="#navbarCollapse" \
         aria-controls="#navbarCollapse" aria-expanded="false" \
