--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -7,5 +7,15 @@
         <h2><a href="">{{ book.title }}</a></h2>
         <p>Author: {{ book.title }}</p>
         <p>Price: {{ book.price }}</p>
+        <div>
+            <h3>Reviews</h3>
+            <ul>
+                {% for review in book.reviews.all %}
+                <li>
+                    <h5>{{ review.author }}:</h5> {{ review.review }} <h5></h5>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 {% endblock content %}
