--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,12 @@ body {
 
 h1 {color:coral}
 
-.bookcover{
+.cover{
     height: 200px;
+    width: auto;
+}
+
+.bookcover{
+    height: 300px;
     width: auto;
 }
